--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "outDir": "./build/",
     "noImplicitAny": true,
-    "module": "ES6",
+    "module": "esnext",
     "target": "ES5",
     "jsx": "react-jsx",
     "allowJs": true,
