--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,6 +3,7 @@
   "rules": {
     "selector-class-pattern": null,
     "declaration-empty-line-before": null,
-    "custom-property-empty-line-before": null
+    "custom-property-empty-line-before": null,
+    "keyframes-name-pattern": null
   }
 }
