--- a/package.json
+++ b/package.json
@@ -91,6 +91,9 @@
     "webpack-dev-server": "^4.15.1"
   },
   "loki": {
+    "looks-same": {
+      "ignoreCaret": true
+    },
     "configurations": {
       "chrome.laptop": {
         "target": "chrome.docker",
